[package]
name = "supplychain_vaultseal"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
uuid = { version = "1", features = ["v4"] }
time = { version = "0.3", features = ["macros", "formatting"] }
anyhow = "1"
thiserror = "1"
sled = "0.34"
sha2 = "0.10"
rand = "0.8"
zeroize = "1"
argon2 = "0.5"
aes-gcm = "0.10"
hex = "0.4"
base64 = "0.22"
once_cell = "1"
tower = "0.5"
tower-http = { version = "0.5", features = ["trace", "cors"] }
bytes = "1"
mime = "0.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
dotenv = "0.15"
bincode = "1"
printpdf = "0.3.4"
tracing = "0.1"
